--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.chromaticlens">
+    <uses-feature android:name="android.hardware.camera" />
+
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-feature android:name="android.hardware.camera" />
@@ -30,16 +32,14 @@
         <activity android:name=".CameraActivity"
             android:label="@string/app_name"
             android:screenOrientation="landscape"
-            <!--below line was added to satiisfy error in acvitity line 30 -->
             android:exported="true">
             <!-- configure this activity to use landscape orientation -->
+            </activity>
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+        </application>
 
-    </application>
-
-</manifest>
+    </manifest>
